--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -158,3 +158,13 @@ div.field, div.actions {
   color: #fff;
 }
 
+
+/* users */
+
+ul.users {
+  margin-top: 1em;
+}
+
+ul.users li {
+  list-style: none;
+}
