--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,16 +3,18 @@
   <nav class= "round">
      <ul>
        <li><%= link_to "Home", root_path %></li>
-       <% if signed_in? %>
+       <% if logged_in? %>
          <li><%= link_to "Profile", current_user %></li>
+         <li><%= link_to "Upload", upload_path %></li>
+         <li><%= link_to "Search", search_path %></li>
          <li><%= link_to "Users", users_path %></li>
          <li><%= link_to "Settings", edit_user_path(current_user) %></li>
        <% end %>
         <li><%= link_to "Help", help_path %></li>
-        <% if signed_in? %>
-          <li><%= link_to "Sign in", signout_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Log out", logout_path , method: "delete" %></li>
         <% else %>
-          <li><%= link_to "Sign in", signin_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
         <% end %>
      </ul>
   </nav>
